@@ -1,5 +1,6 @@
 Changes for 1.4.2:
 
+ - fixed '{HOSTNAME}' macros using for actions (Eugene)
  - fixed e-mail sending to the pedantic qmail (Eugene)
  - fixed communication between systems with different byte orders (Eugene)
  - fixed frontend to accept trigger function time() (Alexei)
